--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.4.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
